--- a/app/sass/Base/_base.scss
+++ b/app/sass/Base/_base.scss
@@ -3,5 +3,9 @@
 
 * {
     box-sizing: border-box;
-    font-family: 'DM+Sans', sans-serif;
+    font-family: "DM Sans", sans-serif;
+}
+
+body {
+    margin: 0;
 }
