--- a/app/sass/Pages/_photographer.scss
+++ b/app/sass/Pages/_photographer.scss
@@ -31,21 +31,21 @@
     justify-content: space-between;
     padding: 35px;
     margin: auto;
-}
 
-.modal header {
-    justify-content: space-between;
-    width: 100%;
-}
+    header {
+        justify-content: space-between;
+        width: 100%;
 
-.modal header img {
-    cursor: pointer;
-}
+        img {
+            cursor: pointer;
+        }
 
-.modal header h2 {
-    font-size: 64px;
-    font-weight: normal;
-    text-align: center;
+        h2 {
+            font-size: 64px;
+            font-weight: normal;
+            text-align: center;
+        }
+    }
 }
 
 form {
@@ -53,24 +53,24 @@ form {
     width: 100%;
     flex-direction: column;
     align-items: flex-start;
-}
 
-form label {
-    color: #312E2E;
-    font-size: 36px;
-}
+    label {
+        color: #312E2E;
+        font-size: 36px;
+    }
 
-form div {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    align-items: self-start;
-    margin-bottom: 26px;
-}
+    div {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        align-items: self-start;
+        margin-bottom: 26px;
+    }
 
-form input {
-    width: 100%;
-    height: 68px;
-    border: none;
-    border-radius: 5px;
+    input {
+        width: 100%;
+        height: 68px;
+        border: none;
+        border-radius: 5px;
+    }
 }
