--- a/app/sass/Composants/_header.scss
+++ b/app/sass/Composants/_header.scss
@@ -4,14 +4,13 @@ header {
     justify-content: space-between;
     align-items: center;
     height: 90px;
+    padding: 0 100px;
 
     .logo {
         height: 50px;
-        margin-left: 100px;
     }
 
     h1 {
         color: #901C1C;
-        margin-right: 100px;
     }
 }
