--- a/app/sass/pages/_photographer.scss
+++ b/app/sass/pages/_photographer.scss
@@ -2,10 +2,30 @@
     display: none;
 }
 
-.photograph-header {
-    background-color: #FAFAFA;
-    height: 300px;
+.photograph__header {
+    background-color: $background-ternary;
     margin: 0 100px;
+    display: flex;
+    height: auto;
+    padding: 60px 50px;
+
+    .photographer {
+        &__title {
+            text-align: left;
+            margin: 0;
+            font-size: 50px;
+        }
+
+        &__tagline {
+            font-weight: 100;
+            color: $font-ternary;
+        }
+
+        &__location, &__tagline , &__price {
+            margin: 1em 0;
+        }
+    }
+
 }
 
 .contact_button {
