--- a/app/sass/pages/_home.scss
+++ b/app/sass/pages/_home.scss
@@ -1,4 +1,4 @@
-.photographer_section,.photograph__header {
+.photographer_section, .photographer__header {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 70px;
