--- a/app/sass/pages/_photographer.scss
+++ b/app/sass/pages/_photographer.scss
@@ -2,6 +2,122 @@
     display: none;
 }
 
+.custom_select {
+    display: flex;
+    position: relative;
+    overflow: hidden;
+
+    * {
+        outline-color: $font-ternary .2em solid;
+    }
+
+    label {
+        margin-right: 1em;
+        font-weight: bold;
+        line-height: 3em;
+    }
+
+    button {
+        padding-left: .5em;
+        text-align: left;
+        border: transparent 0px solid;
+        height: 3em;
+        z-index: 1;
+
+        &::before {
+            content:">";
+            transform: rotate(90deg);
+            font-size: 1.5em;
+            font-weight: bold;
+            position: absolute;
+            right: .5em;
+            line-height: 1.5em;
+            top: .2em;
+            transition: transform .3s ease-in;
+        }
+    }
+
+    button, ul {
+        background-color: $font-secondary;
+        color: $background-ternary;
+        border-radius: .5em;
+        border: transparent 0px solid;
+        line-height: 3em;
+        width: 8em;
+    }
+
+    ul {
+        margin: 0;
+        padding: 0;
+        height: 3em;
+        outline: none;
+        transition: height .2s ease-in-out;
+        overflow: hidden;
+        
+        &.is-open {
+            height: 9em;
+            position:unset;
+
+            li:first-child::after {
+                transform: rotate(-90deg);
+            }
+        }
+
+        &:not(.is-open) {
+            border-radius: .5em;
+            position: absolute;
+            right: 0;
+        }
+    }
+
+    li {
+        list-style: none;
+        height: 3em;
+        border: transparent 1px solid;
+        position: relative;
+        padding-left: .5em;
+
+        &.select {
+            outline: $font-ternary .2em solid;
+            outline-offset: -.4em;
+        }
+
+        &:not(:last-child)::before {
+            content:"";
+            position: absolute;
+            top: -.2em;
+            width: calc(100% - 1em);
+            height: 3em;
+            border-bottom: solid .2em white;
+        }
+
+        
+        &:first-child::after {
+            content:">";
+            transition: transform .5s ease-in;
+            transform: rotate(90deg);
+            font-size: 1.5em;
+            font-weight: bold;
+            line-height: 1.5em;
+            top: .2em;
+            position: absolute;
+            right: .4em;
+        }
+
+        &[aria-selected='true']{
+            background-color: $background-secondary;
+        }
+
+        &:first-child {
+            border-radius: .5em .5em 0 0
+        }
+
+        &:last-child {
+            border-radius: 0 0 .5em .5em
+        }
+    }
+}
+
 .photographer {
     &__header {
         background-color: $background-ternary;
@@ -33,22 +149,75 @@
 
         nav {
             display: flex;
+            margin-top: .5em;
             
-            &>p {
+            &>label {
                 margin-right: 1em;
                 font-weight: bold;
+                line-height: 3em;
             }
 
             select {
+                display: none;
+            }
+
+            .option-custom {
                 background-color: $font-secondary;
                 color: $background-ternary;
                 border-radius: .5em;
-                border: none;
-                border-right: 0.4em #901c1c solid;
-                padding: .5em 1.0em 0.5em 0.5em;
+                width: 8em;
+                height: 3em;
+                transition: height .3s ease-in;
 
-                &:focus-visible {
-                    outline: 0;
+                &.active {
+                    height: 9.4em;
+
+                    div {
+                        display: flex;
+
+                        &:first-child::after {
+                            transform: rotate(-90deg);
+                        }
+                    }   
+                }
+
+                &:not(.active) div:not(:first-child) {
+                    display: none;
+                }
+
+                div {
+                    display: flex;
+                    height: 3em;
+                    align-items: center;
+                    padding: .5em;
+                    justify-content: space-between;
+                    position: relative;
+                    border-top: .2em solid transparent;
+                    border-bottom: .2em solid transparent;
+
+                    &:first-child::after {
+                        content:">";
+                        transform: rotate(90deg);
+                        line-height: 0;
+                        font-size: 1.5em;
+                        position: relative;
+                        left: -.1em;
+                        transition: transform .3s ease-in;
+                    }
+
+                    &:nth-child(2) {
+                        margin: .2em 0;
+                        
+                        &::after {
+                            content:"";
+                            width: calc(100% - 1em);
+                            height: 100%;
+                            position: absolute;
+                            border-top: .2em solid white;
+                            border-bottom: .2em solid white;
+                        }
+                    }
+
                 }
             }
         }
