create custom-select.scss component & sort media

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -2,5 +2,6 @@
 @import "utils/mixins";
 @import "base/base";
 @import "components/header";
+@import "components/custom-select";
 @import "pages/home";
 @import "pages/photographer";
