--- a/app/sass/pages/_photographer.scss
+++ b/app/sass/pages/_photographer.scss
@@ -2,122 +2,6 @@
     display: none;
 }
 
-.custom_select {
-    display: flex;
-    position: relative;
-    overflow: hidden;
-
-    * {
-        outline-color: $font-ternary .2em solid;
-    }
-
-    label {
-        margin-right: 1em;
-        font-weight: bold;
-        line-height: 3em;
-    }
-
-    button {
-        padding-left: .5em;
-        text-align: left;
-        border: transparent 0px solid;
-        height: 3em;
-        z-index: 1;
-
-        &::before {
-            content:">";
-            transform: rotate(90deg);
-            font-size: 1.5em;
-            font-weight: bold;
-            position: absolute;
-            right: .5em;
-            line-height: 1.5em;
-            top: .2em;
-            transition: transform .3s ease-in;
-        }
-    }
-
-    button, ul {
-        background-color: $font-secondary;
-        color: $background-ternary;
-        border-radius: .5em;
-        border: transparent 0px solid;
-        line-height: 3em;
-        width: 8em;
-    }
-
-    ul {
-        margin: 0;
-        padding: 0;
-        height: 3em;
-        outline: none;
-        transition: height .2s ease-in-out;
-        overflow: hidden;
-        
-        &.is-open {
-            height: 9em;
-            position:unset;
-
-            li:first-child::after {
-                transform: rotate(-90deg);
-            }
-        }
-
-        &:not(.is-open) {
-            border-radius: .5em;
-            position: absolute;
-            right: 0;
-        }
-    }
-
-    li {
-        list-style: none;
-        height: 3em;
-        border: transparent 1px solid;
-        position: relative;
-        padding-left: .5em;
-
-        &.select {
-            outline: $font-ternary .2em solid;
-            outline-offset: -.4em;
-        }
-
-        &:not(:last-child)::before {
-            content:"";
-            position: absolute;
-            top: -.2em;
-            width: calc(100% - 1em);
-            height: 3em;
-            border-bottom: solid .2em white;
-        }
-
-        
-        &:first-child::after {
-            content:">";
-            transition: transform .5s ease-in;
-            transform: rotate(90deg);
-            font-size: 1.5em;
-            font-weight: bold;
-            line-height: 1.5em;
-            top: .2em;
-            position: absolute;
-            right: .4em;
-        }
-
-        &[aria-selected='true']{
-            background-color: $background-secondary;
-        }
-
-        &:first-child {
-            border-radius: .5em .5em 0 0
-        }
-
-        &:last-child {
-            border-radius: 0 0 .5em .5em
-        }
-    }
-}
-
 .photographer {
     &__header {
         background-color: $background-ternary;
@@ -151,7 +35,7 @@
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
             gap: 70px;
-            margin-top: 100px;
+            margin-top: 50px;
 
             @include tab {
                 grid-template-columns: 1fr 1fr;
@@ -201,6 +85,36 @@
         nav {
             display: flex;
             margin-top: .5em;
+        }
+    }
+
+    &__like-and-price {
+        width: auto;
+        display: flex;
+        font-weight: bold;
+        position: fixed;
+        right: 14%;
+        bottom: 0;
+        padding: 1em;
+        background-color: $background-secondary;
+        border-radius: .5em .5em 0 0;
+
+        p {
+            margin: 0;
+        }
+
+        img {
+            height: 1em;
+            margin-left: .5em;
+            filter: brightness(0);
+        }
+
+        div {
+            display: flex;
+        }
+
+        .photographer__price {
+            margin-left: 3em;
         }
     }
 }
