--- a/app/sass/pages/_photographer.scss
+++ b/app/sass/pages/_photographer.scss
@@ -2,6 +2,32 @@
     display: none;
 }
 
+.modal {
+    position: absolute;
+    top: 20%;
+    z-index: 9999;
+    margin: 0 25% !important;
+    padding: 4em !important;
+    // transition: visibility 0s linear .5s, opacity .5s ease-in-out;
+
+    &[aria-hidden="false"] {
+        visibility: visible;
+        opacity: 1;
+    }
+
+    &[aria-hidden="true"] {
+        visibility: hidden;
+        opacity: 0;
+    }
+
+    &>img {
+        position: absolute;
+        top: 1em;
+        right: 1em;
+        height: 2em;
+    }
+}
+
 .photographer {
     &__header {
         background-color: $background-ternary;
@@ -89,11 +115,12 @@
     }
 
     &__like-and-price {
-        width: auto;
+        width: 15em;
         display: flex;
+        justify-content: center;
         font-weight: bold;
-        position: fixed;
-        right: 14%;
+        position: sticky;
+        margin-left: calc(100% - 15em);
         bottom: 0;
         padding: 1em;
         background-color: $background-secondary;
