--- a/app/sass/pages/_photographer.scss
+++ b/app/sass/pages/_photographer.scss
@@ -5,10 +5,10 @@
 .modal {
     position: absolute;
     top: 20%;
+    left: 0;
     z-index: 9999;
     margin: 0 25% !important;
     padding: 4em !important;
-    // transition: visibility 0s linear .5s, opacity .5s ease-in-out;
 
     &[aria-hidden="false"] {
         visibility: visible;
@@ -22,9 +22,60 @@
 
     &>img {
         position: absolute;
+        cursor: pointer;
         top: 1em;
         right: 1em;
         height: 2em;
+    }
+}
+
+.carousel {
+    display: flex;
+    width: 100%;
+
+    &>button {
+        background: none;
+        border: none;
+        font-size: 5em;
+        color: $font-secondary;
+        cursor: pointer;
+    }
+
+    .carousel__content {
+        width: 100%;
+        height: 80vh;
+        position: relative;
+
+        &>div {
+            position: absolute;
+            top: 0;
+            width: 100%;
+            height: 80vh;
+            display: flex;
+            align-content: center;
+            justify-content: center;
+            flex-direction: column;
+        }
+
+        h3 {
+            color: $font-secondary;
+        }
+
+        div[aria-hidden="false"] {
+            visibility: visible;
+            opacity: 1;
+        }
+
+        img, video {
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: contain;
+        }
+    
+        div[aria-hidden="true"] {
+            visibility: hidden;
+            opacity: 0;
+        }
     }
 }
 
