--- a/app/sass/pages/_photographer.scss
+++ b/app/sass/pages/_photographer.scss
@@ -4,11 +4,10 @@
 
 .modal {
     position: absolute;
-    top: 20%;
-    left: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     z-index: 9999;
-    margin: 0 25% !important;
-    padding: 4em !important;
 
     &[aria-hidden="false"] {
         visibility: visible;
@@ -18,6 +17,7 @@
     &[aria-hidden="true"] {
         visibility: hidden;
         opacity: 0;
+        z-index: -9999;
     }
 
     &>img {
@@ -32,6 +32,7 @@
 .carousel {
     display: flex;
     width: 100%;
+    height: 80vh;
 
     &>button {
         background: none;
@@ -59,6 +60,8 @@
 
         h3 {
             color: $font-secondary;
+            height: 1em;
+            margin: 1em 0 0 0;
         }
 
         div[aria-hidden="false"] {
@@ -68,7 +71,7 @@
 
         img, video {
             max-width: 100%;
-            max-height: 100%;
+            max-height: calc(80vh - 2em);
             object-fit: contain;
         }
     
@@ -139,6 +142,7 @@
                 width: 100%;
                 object-fit: cover;
                 height: 300px;
+                cursor: pointer;
             }
         }
 
