--- a/app/sass/pages/_photographer.scss
+++ b/app/sass/pages/_photographer.scss
@@ -155,7 +155,7 @@
             align-items: center;
             margin-top: 1em;
 
-            img {
+            input {
                 height: 1em;
                 width: auto;
                 margin-left: .5em;
