--- a/app/sass/pages/_photographer.scss
+++ b/app/sass/pages/_photographer.scss
@@ -20,7 +20,7 @@
         z-index: -9999;
     }
 
-    &>img {
+    input {
         position: absolute;
         cursor: pointer;
         top: 1em;
@@ -31,6 +31,7 @@
 
 .carousel {
     display: flex;
+    align-items: center;
     width: 100%;
     height: 80vh;
 
@@ -38,6 +39,7 @@
         background: none;
         border: none;
         font-size: 5em;
+        height: 1.5em;
         color: $font-secondary;
         cursor: pointer;
     }
@@ -138,7 +140,7 @@
                 margin-top: 1em;
             }
 
-            img, video {
+            a, img, video {
                 width: 100%;
                 object-fit: cover;
                 height: 300px;
