--- a/app/sass/pages/_photographer.scss
+++ b/app/sass/pages/_photographer.scss
@@ -1,5 +1,5 @@
 #contact_modal {
-    display: none;
+    width: 50%;
 }
 
 .modal {
@@ -8,6 +8,15 @@
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 9999;
+    width: 90%;
+    border-radius: 5px;
+    background-color: $background-secondary;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 35px;
+    margin: auto;
 
     &[aria-hidden="false"] {
         visibility: visible;
@@ -20,12 +29,38 @@
         z-index: -9999;
     }
 
-    input {
+    input[alt="close"] {
         position: absolute;
         cursor: pointer;
         top: 1em;
         right: 1em;
         height: 2em;
+    }
+
+    header {
+        margin-bottom: 1em;
+        padding: 0;
+        width: 100%;
+        height: auto;
+        margin-top: -1.5em;
+
+        h1 {
+            margin: 0;
+            color: black;
+            font-size: 3em;
+            font-weight: normal;
+        }
+    }
+
+    form input {
+        &:not(:last-child) {
+            margin-bottom: 1em;
+        }
+
+        &[type="submit"] {
+            margin-top: 1em;
+            width: 8em;
+        }
     }
 }
 
@@ -203,7 +238,7 @@
     }
 }
 
-.contact_button {
+.contact_button, input[type="submit"] {
     font-size: 20px;
     font-weight: bold;
     color: white;
@@ -216,33 +251,6 @@
     cursor: pointer;
 }
 
-.modal {
-    border-radius: 5px;
-    background-color: #DB8876;
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    padding: 35px;
-    margin: auto;
-
-    header {
-        justify-content: space-between;
-        width: 100%;
-
-        img {
-            cursor: pointer;
-        }
-
-        h2 {
-            font-size: 64px;
-            font-weight: normal;
-            text-align: center;
-        }
-    }
-}
-
 form {
     display: flex;
     width: 100%;
@@ -250,7 +258,7 @@ form {
     align-items: flex-start;
 
     label {
-        color: #312E2E;
+        color: $font-ternary;
         font-size: 36px;
     }
 
