add eslint-disable-line for fake error

--- a/app/sass/pages/_photographer.scss
+++ b/app/sass/pages/_photographer.scss
@@ -64,6 +64,12 @@
     }
 }
 
+.modal, .carousel {
+    *:focus, *:focus-visible, * button:focus-visible, * [type=button]:focus-visible {
+        outline: solid 3px $font-ternary;
+    }
+}
+
 .carousel {
     display: flex;
     align-items: center;
