--- a/app/sass/base/_base.scss
+++ b/app/sass/base/_base.scss
@@ -1,4 +1,4 @@
-@import "/node_modules/normalize.css/normalize.css";
+@import "normalize.css";
 @import url('https://fonts.googleapis.com/css?family=DM+Sans&display=swap');
 
 * {
