remove role from nav & css error

--- a/app/sass/components/_custom-select.scss
+++ b/app/sass/components/_custom-select.scss
@@ -3,7 +3,7 @@
     position: relative;
 
     * {
-        outline-color: $font-ternary .2em solid;
+        outline: $font-ternary .2em solid;
     }
 
     label {
